--- a/vue_nikeshop_admin/src/style/theme.scss
+++ b/vue_nikeshop_admin/src/style/theme.scss
@@ -1,4 +1,7 @@
-$bg: #3F51B5;
-$deepBg: #303F9F;
-$lightBg: #536DFE;
-$fontColor: #FFFFFF;
+$bg: #607D8B;
+$deepBg: #37474F;
+$lightBg: #90A4AE;
+$fontColor: #212121;
+$deepFont: #616161;
+$lightFont: #e0e0e0;
+
